# ccomidi

./: .gitmodules  CMakeLists.txt  Instructions.md
src/core/: command_spec.h  sender_core.cpp  sender_core.h
src/gui/: ccomidi_editor.cpp  ccomidi_editor.h  editor_shell.cpp  editor_shell.h  imgui_impl_pugl.cpp
src/gui/metal/: pugl_mac_metal.h  pugl_mac_metal.m
src/plugin/: Info.plist  ccomidi_plugin.cpp  ccomidi_plugin_shared.h  param_ids.h  voicegroup_bridge.cpp  voicegroup_bridge.h
src/plugin/recorder/: Info.plist  recorder_editor.cpp  recorder_editor.h  recorder_plugin.cpp  recorder_plugin_shared.h
src/recorder/: recorder_core.cpp  recorder_core.h  smf_writer.cpp
src/tests/: test_recorder_smf.cpp  test_sender_core.cpp
